apps/Tetris/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tetris
  namespace: tetris


spec:
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
        - name: tetris
          image: faizanqureshi1220/tetris:v1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
