apps/Tetris/service.yml
apiVersion: v1
kind: Service

metadata:
  name: tetris-service
  namespace: tetris

spec:
  selector:
    app: tetris
  ports:
  - port: 80
    targetPort: 3000
  
  type: ClusterIP
