apps/Tetris/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tetris
  namespace: tetris
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: tetris.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tetris-service
                port:
                  number: 80
